[package]
name = "xmake"
version = "0.3.3"
edition = "2021"
license = "MIT"
keywords = ["build-dependencies"]
repository = "https://github.com/A2va/xmake-rs"
homepage = "https://github.com/A2va/xmake-rs"
documentation = "https://docs.rs/xmake"
description = """
A build dependency for running `xmake` to build a native library
"""
categories = ["development-tools::build-utils"]

[dependencies]
cc = "1.0.72"

[workspace]
members = [
    ".",
    "tests/cxx",
    "tests/check-mode",
    "tests/namespace",
    "tests/shared",
    "tests/static",
    "tests/phony",
    "tests/packages/sht-shf-shb",
    "tests/packages/stt-shf-shb",
    "tests/packages/stt-stf-stb",
    "tests/packages/stt-stf-shb",
    "tests/packages/stt-shf-stb"
]
